--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,4 @@
+{<img alt='Stories in Ready' src='https://badge.waffle.io/arumoy-shome/prilepins_strength_program.png?label=ready&title=Ready' />}[https://waffle.io/arumoy-shome/prilepins_strength_program]
 == README
 
 This README would normally document whatever steps are necessary to get the
